# dynamo

./: .dockerignore  .gitignore  Cargo.toml  README.md  pyproject.toml
.devcontainer/: post-create.sh
.github/: filters.yaml
.github/actions/docker-build/: action.yml
.github/scripts/: parse_buildkit_output.py
.github/workflows/: nightly-ci.yml
benchmarks/multimodal/image/: aiperf_large_image.sh  aiperf_small_image.sh
components/power_agent/: Dockerfile  README.md  power_agent.py  requirements.txt
container/: Dockerfile  Dockerfile.sglang  Dockerfile.trtllm  Dockerfile.vllm  use-sccache.sh
deploy/power_agent/: README.md  daemonset.yaml
examples/deployments/powerplanner/: CHANGELOG.md  README.md  agg.yaml  deploy_poweraware.bash  deploy_poweraware_baseinfra.bash  disagg.yaml  dynamo-worker-podmonitor.yaml  full_clean_test.bash  monitor_poweraware.bash  planner-clusterrole-patch.yaml  profile_sla_aic_dgdr.yaml  prometheus-values.yaml  verify_poweraware.bash
examples/kvbm/distributed/sample-registry/: Cargo.toml  registry.rs
fern/fern/: docs.yml  fern.config.json
fern/fern/versions/: latest.yml  v0.8.0.yml
lib/bindings/kvbm/: pyproject.toml
lib/gpu_memory_service/: __init__.py  pyproject.toml  setup.py
lib/gpu_memory_service/client/: __init__.py  cuda_vmm_utils.py  memory_manager.py  rpc.py
lib/gpu_memory_service/common/: __init__.py  cuda_vmm_utils.py  protocol.py  types.py
lib/gpu_memory_service/server/: __init__.py  handler.py  locking.py  memory_manager.py  metadata_store.py  rpc.py
lib/llm/: Cargo.toml
lib/llm/src/: local_model.rs  preprocessor.rs
lib/memory/src/: pinned.rs
lib/nova-streaming/: Cargo.toml  README.md
lib/nova-streaming/src/: error.rs  lib.rs  protocol.rs  streaming.rs
lib/nova-streaming/src/channel/: mod.rs
lib/nova-streaming/tests/: nova_streaming_integration.rs
lib/runtime/src/: metrics.rs
tests/kvbm_integration/: common.py  spanish-prompt.txt  test_cuda_graph.py  test_determinism_agg.py  test_determinism_disagg.py
tests/router/: test_router_dp_attention.py
tests/serve/: test_vllm.py
(+236 files in other folders)
