# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-nova-streaming"
version.workspace = true
edition.workspace = true
description = "Streaming abstractions over nova's transport layer"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
dynamo-identity = { workspace = true }
dynamo-nova = { workspace = true }
dynamo-nova-backend = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

dashmap = "6.1.0"
flume = "0.12.0"
pin-project-lite = "0.2"
serde_bytes = "0.11"
serde_json = { workspace = true }

[features]
default = ["am-tests"]
am-tests = []  # Enable AM transport integration tests (requires nova infrastructure)

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rmp-serde = "1.3"
